Skriver om tester til å bruke @ParameterizedTest